# luventix

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.agents/skills/bmad-testarch-automate/: workflow.yaml
.agents/skills/bmad-testarch-ci/: workflow.md  workflow.yaml
.agents/skills/bmad-testarch-test-review/: instructions.md
.agents/skills/bmad-testarch-trace/: SKILL.md
.claude/skills/bmad-teach-me-testing/: workflow.md
.claude/skills/bmad-testarch-atdd/: bmad-skill-manifest.yaml  validation-report-20260127-095021.md  validation-report-20260127-102401.md
.claude/skills/bmad-testarch-automate/: instructions.md  (+1 more)
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: deferred-work.md  spec-modernize-python-best-practices.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml  module-help.csv
data/: Aligned_SIBO_Test_Set.tsv  Peaks.txt  SIBO_Test_Set.tsv
docs/: architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
src/: Alignment.py  IdentPeaks.py  PlotALL.py  luv-align.py
src/luv_align/: __init__.py  alignment.py  config.py  io.py  peaks.py  pipeline.py  plotting.py
src/luvutils/: __init__.py  align-data.py  luvConfig.ini  luvutils.py  makelabels.py  makematrix-luv.py  makematrix.py  plot-results-luv.py
tests/: conftest.py  test_alignment.py  test_config.py  test_io.py  test_luv_align_cli.py  test_peaks.py  test_pipeline.py  test_plotting.py
(+56 files in other folders)
