[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luv-align"
version = "0.1.0"
description = "Signal alignment pipeline for mass spectrometry / metabolomics data"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "fastdtw>=0.3",
    "mplcursors>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=luv_align --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["luv_align"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "plt\\.show",
]
